# Whispr

./: .gitignore  README.md  canister_ids.json  package-lock.json  package.json
src/Whispr_backend/: .env.example  Cargo.toml  Whispr_backend.did
src/Whispr_backend/src/: lib.rs
src/Whispr_backend/src/authority/: handlers.rs  ipfs.rs  mod.rs  store.rs  types.rs
src/Whispr_frontend/: .env.example  .gitignore  jest.config.js  package.json  tailwind.config.js  vite.config.js
src/Whispr_frontend/public/: .ic-assets.json5
src/Whispr_frontend/src/: App.jsx  index.js
src/Whispr_frontend/src/__tests__/: setup.js
src/Whispr_frontend/src/__tests__/constants/: constants.test.js
src/Whispr_frontend/src/__tests__/hooks/: useFilters.test.js
src/Whispr_frontend/src/__tests__/services/: reportService.test.js
src/Whispr_frontend/src/__tests__/utils/: helpers.test.js  storage.test.js
src/Whispr_frontend/src/api/: Whispr_backend.did.js  whisprBackend.js
src/Whispr_frontend/src/components/common/: SortableHeader.jsx  StatusComponents.jsx
src/Whispr_frontend/src/constants/: index.js
src/Whispr_frontend/src/context/: Web3Context.jsx
src/Whispr_frontend/src/hooks/: index.js  useAuthorityDashboard.js  useAuthorityStats.js  useFilters.js  useReports.js
src/Whispr_frontend/src/pages/: AuthorityPage.jsx  Authority_Chat.jsx  DashboardPage.jsx  HomePage.jsx  ReportPage.jsx  ReportViewPage.jsx
src/Whispr_frontend/src/services/: aiService.js  authorityService.js  index.js  reportService.js
src/Whispr_frontend/src/utils/: helpers.js  storage.js
(+24 files in other folders)
