[package]
name = "Whispr_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
serde_json = "1.0"
base64 = "0.22"